@@ -143,7 +143,7 @@ public class SqlAlterTableAddIndex extends SqlAlterTable {
                 DdlManager.getInstance().createIndex(
                         logicalTable,
                         indexMethodName,
-                        columnList.getList().stream().map( Node::toString ).collect( Collectors.toList() ),
+                        columnList.getList().stream().map( Node::toString ).toList(),
                         indexName.getSimple(),
                         unique,
                         storeInstance,
